service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: home-app
spec:
  type: "NodePort"  
  selector:
    app: home-app
  ports:
  - port: 80
  targetPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: mobile-app
spec:
  selector:
    app: mobile-app
  ports:
  - port: 80
    targetPort: 80
